2-admissionControl/envAdmissionControl2.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validation-webhook-example-cfg
  labels:
    app: admission-webhook-example
webhooks:
  - name: k2admissionwebhook.azurewebsites.net
    clientConfig:
      url: https://k2admissionwebhook.azurewebsites.net/api/k2envwebhook
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUhGakNDQlA2Z0F3SUJBZ0lURmdBQWNJMXdvcVRMWTZ1aHh3QUFBQUJ3alRBTkJna3Foa2lHOXcwQkFRc0YKQURDQml6RUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdUQ2xkaGMyaHBibWQwYjI0eEVEQU9CZ05WQkFjVApCMUpsWkcxdmJtUXhIakFjQmdOVkJBb1RGVTFwWTNKdmMyOW1kQ0JEYjNKd2IzSmhkR2x2YmpFVk1CTUdBMVVFCkN4TU1UV2xqY205emIyWjBJRWxVTVI0d0hBWURWUVFERXhWTmFXTnliM052Wm5RZ1NWUWdWRXhUSUVOQklEUXcKSGhjTk1UY3hNakUzTVRJME1EUTNXaGNOTVRreE1qRTNNVEkwTURRM1dqQWVNUnd3R2dZRFZRUUREQk1xTG1GNgpkWEpsZDJWaWMy [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [ ""]
        apiVersions: ["v1"]
        resources: ["pods"]
    namespaceSelector:
      matchLabels:
        admission-webhook-example: enabled
